Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -14,6 +14,15 @@
 \usepackage{color}
 \usepackage{pdfpages}
 
+\usepackage{titlesec}
+
+\setcounter{secnumdepth}{4}
+
+\titleformat{\paragraph}
+{\normalfont\normalsize\bfseries}{\theparagraph}{1em}{}
+\titlespacing*{\paragraph}
+{0pt}{3.25ex plus 1ex minus .2ex}{1.5ex plus .2ex}
+
 %% Sets page size and margins
 \usepackage[a4paper,top=3cm,bottom=2cm,left=3cm,right=3cm,marginparwidth=1.75cm]{geometry}
 
@@ -42,7 +51,7 @@
 %----------------------------------------------------------------------------------------
 
 \HRule \\[0.4cm]
-{ \huge \bfseries User Guide Thermography}\\[0.4cm] % Title of your document
+{ \huge \bfseries Technical description and User guide: Thermography-based respiration monitoring}\\[0.4cm] % Title of your document
 \HRule \\[1.5cm]
  
 %----------------------------------------------------------------------------------------
@@ -88,18 +97,22 @@ Jamie \textsc{Johnston}\\[0.3cm] % Supervisor's Name
 
 \listoffigures
 
+
 \newpage
 
 
-
 \section{Introduction}
-This user guide intends to provide the user an understanding of the Thermography device developped at Johnston Lab as well giving the reader useful indications for troubleshooting.
+This user guide intends to provide the user an understanding of the Thermography device developed at Johnston Lab as well giving the reader useful indications for troubleshooting.\\
 
-Note: as of 3rd of September 2019, the device has shown extremely encouraging results on human but is not working on mice. This due to the smaller nostrils, smaller volume of air and smaller temperature delta.
+This device was developed as part of my internship at JohnstonLab (Leeds University, UK) during my master's years as a student engineer from the Université Libre de Bruxelles, Belgium.
 
-Note2: The workflow, thoughts, issues, ... for this project are discussed in my OneNote.
+This device is part of the rig that allows the lab to perform in-vivo measurements and experiments on mice. One of the field of research concerns the perception of odors and its relation to phase-shift with the respiratory signal. To be able to do awake mice experiments, a non-invasive, non-contact robust method to measure the respiration cycle was required.\\
 
-The latest updates are available on my Github: \url{https://github.com/maverstr/Thermography}
+Note: as of 3rd of September 2019, the device has shown extremely encouraging results on human but is not working on mice. This is probably due to the smaller nostrils, smaller volume of air and smaller temperature delta.
+
+Note2: The workflow, thoughts, issues, ... for this project are discussed in my OneNote.\\
+
+The latest software and documentation updates are available on my Github: \url{https://github.com/maverstr/Thermography}
 
 \section{Objective}
 The device purpose is to provide a visualisation of the respiration of a mouse during 2-photon imaging.
@@ -107,11 +120,11 @@ The device purpose is to provide a visualisation of the respiration of a mouse d
 The idea is to implement an infrared thermography system allowing for respiration cycle detection by detecting the cold air flow coming to the nostrils when the mouse is breathing in and hotter air coming out at the expiration. 
 
 This kind of device already exists (see IR thermography-based monitoring of respiration phase without
-image segmentation - K. Mutlua,b, J. Esquivelzeta Rabella,b, P. Martin del Olmod, S. Haeslera,b,c,d ) but uses high-performance and expensive cameras (FLIR A325sc with 50 µm lens, 60 fps, 320 × 240 pixels, about 11 000£). 
+image segmentation - K. Mutlua,b, J. Esquivelzeta Rabella,b, P. Martin del Olmod, S. Haeslera,b,c,d ) but uses high-performance and expensive cameras (FLIR A325sc with 50 µm lens, 60 fps, 320 × 240 pixels, about £11 000 and additional close-up lens £2000 - £8000). 
 
-The device allow to obtain similar results with a much more inexpensive design and equipment, easily reproducible and open-source.
+The device should allow to obtain similar results with a much more inexpensive design and equipment, easily reproducible and open-source.
 
-To do so, I use the MLX90640 camera (32x24 pixels resolution, 32Hz max, 30£), a LCD display ILI9341 and an ESP32 as a microcontroller.
+To do so, I use the MLX90640 camera (32x24 pixels resolution, 32Hz effective maximum refresh rate, £30), a LCD display ILI9341 and an ESP32 as a microcontroller.
 
 \section{Hardware}
 \subsection{Infrared camera}
@@ -126,17 +139,17 @@ The pins are:
 
 
 \subsection{LCD Display}
-The LCD Display is used to get the camera signal and help the user to place the camera correctly in front of the nostrils.
+The LCD Display is used to visualize the camera signal and help the user to place the camera correctly in front of the nostrils.
 The display used in the device is the TFT ILI9341. It can be controlled either with SPI mode or 8-bit parallel. Because of the multiple pins required on the microcontroller for buttons, switches, camera and display, the SPI mode is used. The parallel mode would be faster but requires 8 more pins.
 
-Note that some jumpers must be soldered to choose the correct mode.
+Note that some jumpers must be soldered to choose the correct mode (\url{https://cdn-learn.adafruit.com/downloads/pdf/adafruit-2-dot-8-color-tft-touchscreen-breakout-v2.pdf}, page 19). Solder IM1, IM2 and IM3 (do not solder closed IM0).\\
 
-This display also comes with a resistive touchscreen. This allows to crop the image in order to reduce the number of pixels which must be computed and get a faster refresh rate.
-
+This display also comes with a resistive touchscreen. 
+The software uses the touchscreen to allow the user to define a cropping area and define an ROI so that only a part of the image has to be computed, reducing the number of pixels and data and therefore allowing a faster refresh rate.
 \subsection{Microcontroller}
 An ESP32 has been chosen as the microcontroller as it is fast, reliable, available as a devkit and has a high number of pins among some ADC and DAC pins.
 
-Note: when using the Arduino IDE to flash the ESP, the boot button must be held down during the communication. A simple workaround is to solder a 10µF capacitor between GND and pin EN.
+Note: when using the Arduino IDE to flash the ESP, the boot button must be held down during the communication. A simple workaround that proved to be working is to solder a 10µF capacitor between GND and pin EN.
 
 
 \subsection{Enclosure}
@@ -144,14 +157,22 @@ The device comes with an enclosure.
 The display is on top of it with 3 pushbuttons and toggleswitch. A micro USB connector on the side is required for power as well as to flash the µC and a BNC connector outputs the analog signal of the breathing.
 The camera is linked to the enclosure via a 4-core connector and a cable.
 
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width = 10cm]{images/enclosure1.jpg}
+    \caption{Device in enclosure}
+    \label{fig:enclosure}
+\end{figure}
+
 
 \section{Software}
-The whole code is available on my github (https://github.com/maverstr/Thermography)
+The whole code is available on my github 
+(\url{https://github.com/maverstr/Thermography})
 
 \subsection{Libraries}
-The µC is flashed through the Arduino IDE. The ESP32 core is therefore required. (https://github.com/espressif/arduino-esp32).
+The µC is flashed through the Arduino IDE. The ESP32 core is therefore required. (\url{https://github.com/espressif/arduino-esp32}).
 
-Multiple libraries are required and some of them have been modified to use with the device. Most of them are available as part of my release on Github.
+Multiple libraries are required and some of them have been modified to use with the device. All of them are available as part of my release on Github with the exception of the ESP32 core for Arduino IDE (\url{https://github.com/espressif/arduino-esp32}).
 
 \begin{itemize}
     \item mlx90640 API (reworked)
@@ -168,18 +189,18 @@ Multiple libraries are required and some of them have been modified to use with 
 \subsection{How does it work?}
 As usual in a microcontroller code, comes the declaration of all the variables and functions. Then comes a setup and finally the loop.
 
-\subsection{Setup}
+\subsubsection{Setup}
 The setup initalizes all the interrupt pins and the required pull-ups then starts a Serial at 500,000bauds and an I2C communication at 400kHz.
-The µC then tries to communicate with the camera and initialize it. Time to also extract the EEPROM calibration data through an EEPROM dump. This is necessary for this step to be done at 400kHz max.
+The µC then tries to communicate with the camera and initialize it. Time to also extract the EEPROM calibration data through an EEPROM dump. Note that EEPROM can only be read at a maximum clock speed of 400kHz.
 Once the EEPROM is released, the I2C is set 1MHz (fast-mode plus).
 
 At the end of the setup, a reference frame is taken and a calibration is performed.
 
-\subsection{Loop}
+\subsubsection{Loop}
 The loop is divided in 3 main parts:
-\subsubsection{Temperature Reading}
-This mode is the most precise one and can be toggled to via the toggleswitch on top of the enclosure. It is however the slowest.
-\subsubsection{Raw Reading}
+\paragraph{Temperature Reading}
+This mode is the most precise one and can be toggled to via the toggleswitch on top of the enclosure. It is however the slowest as heaby computations are required to transform the raw data into actual temperature values in Celsius.
+\paragraph{Raw Reading}
 This is the most important mode as the data will be gathered from there. 
 
 Firs, we check a specific bit (bit 2) at 0x8000 indicating if new data is available in the RAM of the camera (meaning a new acquisition has been done).
@@ -188,30 +209,30 @@ This bit must be manually reset to 0 when starting a new computation.
 
 The camera stores data in 32x24 (768) registers. We therefore go through each of them, or only several depending on the cropping settings. The I2C buffer allows to get 32bytes of data in one read so we work on one row at a time.
 
-First, as the data is unsigned int, a gain correction is performed (i.e. if value > 32767, value - 65536).
+First, as the data is unsigned int, a 'gain' correction (it is actually a sign correction but expressed as gain in the datasheet) is performed (i.e. if value > 32767, value - 65536).
 
-Now, we can use the data from the EEPROM and ambient temperatures to correct these values, which makes them floating point and is required to have a proper temperature accuracy. However,regarding the computation speed. The ESP32 is indeed slow with float but quite fast with integers. It is therefore more interesting to keep the values as integers. Corrections not required when comparing frames to get the trend as the same correction is applied to the same pixel every frame. We can therefore avoid these corrections when comparing the same pixels on different frames. This however, intrinsically creates a "reference frame".
+Now, we can use the data from the EEPROM and ambient temperatures to correct these values, which makes them floating point and is required to have a proper temperature accuracy. However,regarding the computation speed : the ESP32 is slow with float but quite fast with integers. It is therefore more interesting to keep the values as integers. Corrections are not required when comparing frames to get the trend as the same correction is applied to the same pixel every frame. We can therefore avoid these corrections when comparing the same pixels on different frames. This however, intrinsically creates a "reference frame".
 
 Integrating a derivative gives the original variable but without a constant. Again, this is interesting in our case as we are only interested in relative temperature difference.
-In the discrete word, integrate a derivation is the same as comparing 2 frames and sum the delta for every comparison.
+In the discrete world, integrate a derivation is the same as comparing 2 frames and sum the delta for every comparison.
 We therefore have several arrays containing the actual frame, the last frame, the derivative and the integration (the whole sum).
 
 The values can either be sent further as they are or averaged over a few frames (rolling average).
-They can also be changed through a look-up-table for histogram equalization.
+They can also be changed through a look-up-table for histogram equalization (see section \ref{histogram}).
 
 These values can then be mapped to 8-bit values (for DAC output and for LCD 8bit grayscale representation) and to do so, we use the maximum and minimum values obtained from a Calibration (see subsection \ref{calibration}).
 
 The analog output is the average of the pixels inside the ROI. This ROI can be either the whole cropped region or only the pixels which a standard deviation above a certain threshold inside the cropped region. 
 
-\subsubsection{Interrupt and Serial handling}
+\paragraph{Interrupt and Serial handling}
 Whenever an interrupt is triggered, a corresponding flag is set. At the end of each loop, we check the values of each flag and relevant operations is performed.
 
-Same thing if bytes are waiting in the Serial buffer (used mainly for debugging purposes or added functionalities).
+Same thing if bytes are waiting in the reception serial buffer (used mainly for debugging purposes or added functionalities).
 
 
 \subsection{Calibration}
 \label{calibration}
-A calibration is performed at the end of the setup and on request with a pushbutton. The calibration takes 64 frames in a row and keeps the maximum and minimum pixel values of these frames. This gives a range on which to map the values. The range is in practice reduced by 30\% to have a higher demarcation between high and low values and avoid aberrant range. Moreover, the values higher than the range are set to max range.
+A calibration is performed at the end of the setup and on request with a pushbutton. The calibration takes 64 frames in a row and keeps the maximum and minimum pixel values of these frames. This gives a range on which to map the values. The range is in practice reduced by 30\% to have a higher demarcation between high and low values and avoid aberrant range. Moreover, the values higher than the range are constrained to max range.
 
 \subsection{Reference Frame}
 Because intrinsically comparing frames makes the first frame a "reference", this reference can be reset by setting the sum (integration of the derivatives) to zero for every pixel.
@@ -220,6 +241,7 @@ It is therefore important to put the camera in front of an uniform background wh
 If it is done in front of the nostrils, this will simply remove the facial background. This can sometimes improve the contrast for the nostrils but ideally you want the reference frame to be taken exactly at the point of end of expiration which although easy on humans can be difficult on mice.
 
 \subsection{Histogram}
+\label{histogram}
 In order to improve the contrast of both the image and the analog output, an histogram analysis is done on calibration and a look-up-table for histogram equalization is created. This makes the image more noisy and harder for a human to see what is in front of the camera but it can improve the contrast of the data.
 
 \subsection{Standard Deviation}
@@ -234,13 +256,51 @@ When powered, the device will take 2-3 seconds to calibrate itself. You ideally 
 The FOV being narrow, the camera must be placed close (i.e. withing 2-3 cm) to the nostrils.
 On both modes you should be able to see human nostrils.
 
-When satisfied with the camera placement, you can start cropping the screen. To do so, press the green button on the screen. When pressed it should turn blue and you can point on the screen to set the first corner of the cropping. Do the same with the purple one. A square is drawn on the image. If satisfied, press the yellow button to validate.
+When satisfied with the camera placement, you can start cropping the screen. 
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width = 6cm]{images/screenFull.jpg}
+    \caption{Screen at full-size, awaiting command}
+    \label{fig:not cropped}
+\end{figure}
+
+To do so, press the green button on the screen. When pressed it should turn blue and you can point on the screen to set the first corner of the cropping. Do the same with the purple one.
+
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width = 8cm]{images/screenSelected.jpg}
+    \caption{First corner placed, end corner selected (purple turned blue)}
+    \label{fig:selected}
+\end{figure}
+
+A square is drawn on the image.
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width = 8cm]{images/screenSquare.jpg}
+    \caption{Selection Square is shown, press yellow to validate the cropping}
+    \label{fig:screenSquare}
+\end{figure}
+
+If satisfied, press the yellow button to validate.
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width = 8cm]{images/screenCropped.jpg}
+    \caption{Image is cropped to selected ROI}
+    \label{fig:screenCropped}
+\end{figure}
+
 
 TIP: you can also "uncrop" by drawing the square out of bounds of the ROI.
 
 You can then press the button to take a new calibration and, if needed, a new reference frame. Rolling average can be toggled through another button.
 
 The analog signal will be sent to the BNC connector and can be seen with an oscilloscope.
+
+\newpage
 
 \section{Expected results}
 When using the device on human nostrils, the display should show black and purples pixels on the nostrils. (purple simply means below the minimum calibration values and is useful to quickly see if the camera is correctly placed).
@@ -255,15 +315,15 @@ RC Circuit low-pass on the output and RC circuit low-pass to hardware debounce t
 There are also two supply decoupling capacitors.
 A 5V pin is free to use as well as multiple ground pins.
 
-The pin headers for the camera should be connected to the 4-core connector and the headers for the display should be directly connected. They are both sequenced in the good order (meaning every wire side-by-side on the PCB should be side-by-side on the camera and display).
-\begin{figure}
+The pin headers for the camera should be connected to the 4-core connector and the headers for the display should be directly connected. They are both sequenced in the good order (meaning every wire side-by-side on the PCB should be side-by-side on the camera and display). Refer to the pin names to find the pin 1.
+\begin{figure}[h!]
     \centering
     \includegraphics[width = 12cm]{images/PCBViewer.png}
     \caption{PCB View}
     \label{fig:PCBView}
 \end{figure}
 
-\begin{figure}
+\begin{figure}[h!]
     \centering
     \includegraphics[width = 12cm]{images/BoardView.PNG}
     \caption{PCB Design}
@@ -273,12 +333,16 @@ The pin headers for the camera should be connected to the 4-core connector and t
 
 The schematic can be seen in subsection \ref{schematic}.
 
+\newpage
+
 \section{Troubleshooting}
 \subsection{Buttons not working}
 Check that the wires connected to the buttons are still there and haven't been torn apart (usually ground and digital pull-up).
 \subsection{Touchscreen not working}
 Make sure that the 4 wires for the touchscreen are well connected. If the touchscreen works but doesn't interact where you actually touch the screen, the order of the cables might be reversed.
-\subsection{}
+
+\subsection{There is a "shadow" on the screen}
+It is because intrinsically, the process creates a reference frame when the device is first powered. Always shut the camera (with your hand, camera down on a table, ...) and then use the reference frame push button to reset it when using the device. 
 
 \section{Other tools}
 \subsection{Processing3 data recording}
@@ -287,8 +351,21 @@ The script is available on Github.
 
 To use it, simply activate the Serial Output in the ESP32 code and make sure to end each frame with a "@" character.  
 
+\subsection{Processing3 Histogram Visualisation}
+Another Processing3 script has been written to visualize the histogram of the values. It can be used to compare before and after the equalization.
+
+
 \subsection{Python visualisation}
 I've made a script that allows to visualize the results from the Processing3 recording. Simply convert the .csv files into .txt files and use Notepad++ to search and replace: "" by nothing. Then call the file raw.txt and launch the Python script.
+
+It works best with the raw values, i.e. use the data recording script with:
+\begin{lstlisting}
+      imageOutput = mydata[x];
+#ifdef _SERIAL_OUTPUT_
+      Serial.print(imageOutput);
+      Serial.print(F(" "));
+#endif
+\end{lstlisting}
 
 \begin{figure}[h!]
     \centering
@@ -297,25 +374,10 @@ I've made a script that allows to visualize the results from the Processing3 rec
     \label{fig:python}
 \end{figure}
 
+You can also select an ROI with a lasso to specifically analyse the signal on a specific zone.
 
-\subsection{MLX90614}
-A few tries have been done with an MLX90614.
-The datasheet wasn’t really detailed concerning the refresh rate. I knew I couldn't expect more that 8Hz in SMBus mode (similar to i2c) but a PWM mode is available and the increase in accuracy (and therefore sensitivity) was worth the try.
-
-The connection is pretty simple : 3.3V on VDD, GND on VSS and SCL and SDA to respective pins. The SMBus mode works correctly although the precision in non thermal equilibrium is somehow a bit wrong.
-Note that pull-up resistors are needed on SCL and SDA.
-
-The refresh rate is capped just below 8Hz…
-
-To switch to PWM mode, a value must be changed in the EEPROM of the sensor. Address: 0x22, value : 0b111
-Then the sensor can be unplugged and replugged or put in sleep mode and then wake it up. The PWM signal is available on SDA pin and SCL should be pulled high.
-To switch back to SMBus mode (necessary to change other EEPROM values), the SCL must be kept low for a few milliseconds then back to microcontroller SCL. Once back in SMBus, the register value can be changed again to 0b000 otherwise on next POR it reverts back to PWM mode.
-
-The temperature ranges are set in addresses 0x20 (max) and 0x21 (min). The values are entered in Kelvin x100 (i.e. 20°C = 29325 = 0x728D
-
-The config register can be changed (0x25) to reduce the settle time.
-
-Unfortunately, the sensor does not seem to be able to catch the respiration and is too slow.
+This can be seen on videos: \url{https://youtu.be/HMBiLHmhjuE}, \url{https://youtu.be/HMBiLHmhjuE}, \url{https://youtu.be/jNMLQpuT7IE}
+\newpage
 
 \section{Improvements}
 \subsection{PCB}
@@ -324,8 +386,9 @@ Regarding the electronic circuit:
     \item Add a 10µF capacitor between EN and GND to allow easy flashing of the ESP32 on the PCB instead of soldering it to the ESP32 directly.
     \item Add external pull-ups for SDA and SCL instead of on the camera directly.
     \item Increase Hole size and screw the PCB on the enclosure instead of gluing it.
-    \item Add a GPIO pin header for testing purposes (e.g.  GPIO4). It allows for example to trigger the oscilloscope on that channel and put the pin to digital high and low at specific moments in the code. Allows easy understating of the timing and dynamics of the code.
+    \item Add a GPIO pin header for testing purposes (e.g.  GPIO4). It allows for example to trigger the oscilloscope on that channel and put the pin to digital high and low at specific moments in the code. It allows easy understanding of the timing and dynamics of the code.
 \end{itemize}
+These improvements have been done on the actual circuit but not on the PCB itself nor on the schematic.
 
 \subsection{Lens}
 To improve the resolution of the camera and be able to use it on mice, adding an IR lens might help.
@@ -424,7 +487,35 @@ i2c_err_t i2cAttachSCL(i2c_t * i2c, int8_t scl)
 Further work could be done on understanding exactly why it happens and if that can be changed. The I2C frequency for the moment is about 650kHz so being able to push it to 1MHz might help.
 However, it is also possible that the camera does not refresh high enough and therefore the communication is blocked by this bottleneck.
 
+
+
+
+
 \appendix
+
+\section{Bill of materials}
+An Excel file regrouping the bill of materials is available on my Github: \url{https://github.com/maverstr/Thermography}
+
+\section{MLX90614}
+A few tries have been done with an MLX90614.
+The datasheet wasn’t really detailed concerning the refresh rate. I knew I couldn't expect more that 8Hz in SMBus mode (similar to i2c) but a PWM mode is available and the increase in accuracy (and therefore sensitivity) was worth the try.
+
+The connection is pretty simple : 3.3V on VDD, GND on VSS and SCL and SDA to respective pins. The SMBus mode works correctly although the precision in non thermal equilibrium is somehow a bit wrong.
+Note that pull-up resistors are needed on SCL and SDA.
+
+The refresh rate is capped just below 8Hz…
+
+To switch to PWM mode, a value must be changed in the EEPROM of the sensor. Address: 0x22, value : 0b111
+Then the sensor can be unplugged and replugged or put in sleep mode and then wake it up. The PWM signal is available on SDA pin and SCL should be pulled high.
+To switch back to SMBus mode (necessary to change other EEPROM values), the SCL must be kept low for a few milliseconds then back to microcontroller SCL. Once back in SMBus, the register value can be changed again to 0b000 otherwise on next POR it reverts back to PWM mode.
+
+The temperature ranges are set in addresses 0x20 (max) and 0x21 (min). The values are entered in Kelvin x100 (i.e. 20°C = 29325 = 0x728D
+
+The config register can be changed (0x25) to reduce the settle time.
+
+Unfortunately, the sensor does not seem to be able to catch the respiration and is too slow.
+
+
 \includepdf[pagecommand = \section{PCB Schematic \label{schematic}}, angle = 270]{images/schematic}
 
 
